--- a/child_pages/events.html
+++ b/child_pages/events.html
@@ -59,10 +59,145 @@
             
             <div class="event-card">
                 <ul class="event-info">
-                    <li class="name"><strong>Get Out The Vote Calling - Democrats</strong></li>
-                    <li class="description">Help the candidates get votes <a href="https://www.facebook.com/timalexanderforcongress/posts/pfbid02Q4QHbHCaDwJ3uLe5Qx9CyRgBe1ErQc1Sa6C9Tem1Z79Drzq8h5YG1d5AK1hrokZZl">Details on Facebook</a></li>
-                    <li class="date-and-time">6/4/24 - 9 am</li>
+                    <li class="name"><strong>CCRRO Charlesworth Fundraiser Luncheon</strong></li>
+                    <li class="description">Fundraiser for Republican Candidates <a href="https://www.ccrrogop.org/event-calendar">Cumberland County Republicans Site</a></li>
+                    <li class="date-and-time">6/20/24 - 12:30pm</li>
                     <li class="location">No physical address provided</li>
+                </ul>
+            </div>
+
+            <div class="event-card">
+                <ul class="event-info">
+                    <li class="name"><strong>CCRRO Charlesworth Fundraiser Luncheon</strong></li>
+                    <li class="description">Fundraiser for Republican Candidates <a href="https://www.ccrrogop.org/event-calendar">Cumberland County Republicans Site</a></li>
+                    <li class="date-and-time">8/3/24 - 12:30pm</li>
+                    <li class="location">No physical address provided</li>
+                </ul>
+            </div>
+
+            <div class="event-card">
+                <ul class="event-info">
+                    <li class="name"><strong>Deerfield Day</strong></li>
+                    <li class="description">Celebrate Deerfield's Birthday and potentially meet the candidates<a href="https://explorecumberlandnj.com/event/deerfield-day/">Explore Cumberland Site</a></li>
+                    <li class="date-and-time">8/3/24 - 12:00 - 5:00pm</li>
+                    <li class="location">Lobiondo Park, 678 Morton Avenue, Bridgeton NJ 08302 </li>
+                </ul>
+            </div>
+
+            <div class="event-card">
+                <ul class="event-info">
+                    <li class="name"><strong>Vineland School Board Meeting</strong></li>
+                    <li class="description">Find out what's going on with Vineland Public Schools<a href="https://www.vineland.org/o/vps/page/board-of-education">School Board Site</a></li>
+                    <li class="date-and-time">8/7/24 - 5:00pm</li>
+                    <li class="location">Landis Administration Building, 61 West Landis Ave, Vineland NJ 08360</li>
+                </ul>
+            </div>
+
+            <div class="event-card">
+                <ul class="event-info">
+                    <li class="name"><strong>CCRRO Breakfast Meeting</strong></li>
+                    <li class="description">Hear messaging from local Republicans and meet local republicans<a href="https://www.ccrrogop.org/event-calendar">Cumberland County Republicans Site</a></li>
+                    <li class="date-and-time">8/17/24 - 8:30pm</li>
+                    <li class="location">Eastlyn Golf Course or Maurice Township Firehall (double check their site)</li>
+                </ul>
+            </div>
+
+            <div class="event-card">
+                <ul class="event-info">
+                    <li class="name"><strong>County Commissioner Meeting</strong></li>
+                    <li class="description">Hear what's going on in the county and make public comments about your concerns<a href="https://cumberland.iqm2.com/Citizens/Detail_Meeting.aspx?ID=1667">Cumberland County Government Site</a></li>
+                    <li class="date-and-time">8/20/24 - 6:00pm</li>
+                    <li class="location">Administration Building, 164 West Broad Street, Bridgeton NJ 08302</li>
+                </ul>
+            </div>
+
+            <div class="event-card">
+                <ul class="event-info">
+                    <li class="name"><strong>Vineland School Board Meeting</strong></li>
+                    <li class="description">Find out what's going on with Vineland Public Schools<a href="https://www.vineland.org/o/vps/page/board-of-education">School Board Site</a></li>
+                    <li class="date-and-time">8/21/24 - 5:00pm</li>
+                    <li class="location">Landis Administration Building, 61 West Landis Ave, Vineland NJ 08360</li>
+                </ul>
+            </div>
+
+            <div class="event-card">
+                <ul class="event-info">
+                    <li class="name"><strong>CCRRO Breakfast Meeting</strong></li>
+                    <li class="description">Hear messaging from local Republicans and meet local republicans<a href="https://www.ccrrogop.org/event-calendar">Cumberland County Republicans Site</a></li>
+                    <li class="date-and-time">8/31/24 - 8:30pm</li>
+                    <li class="location">Eastlyn Golf Course or Maurice Township Firehall (double check their site)</li>
+                </ul>
+            </div>
+
+            <div class="event-card">
+                <ul class="event-info">
+                    <li class="name"><strong>Vineland School Board Meeting</strong></li>
+                    <li class="description">Find out what's going on with Vineland Public Schools<a href="https://www.vineland.org/o/vps/page/board-of-education">School Board Site</a></li>
+                    <li class="date-and-time">9/4/24 - 5:00pm</li>
+                    <li class="location">Landis Administration Building, 61 West Landis Ave, Vineland NJ 08360</li>
+                </ul>
+            </div>
+
+            <div class="event-card">
+                <ul class="event-info">
+                    <li class="name"><strong>County Commissioner Meeting</strong></li>
+                    <li class="description">Hear what's going on in the county and make public comments about your concerns<a href="https://cumberland.iqm2.com/Citizens/Detail_Meeting.aspx?ID=1667">Cumberland County Government Site</a></li>
+                    <li class="date-and-time">9/10/24 - 6:00pm</li>
+                    <li class="location">Administration Building, 164 West Broad Street, Bridgeton NJ 08302</li>
+                </ul>
+            </div>
+
+            <div class="event-card">
+                <ul class="event-info">
+                    <li class="name"><strong>CCRRO Breakfast Meeting</strong></li>
+                    <li class="description">Hear messaging from local Republicans and meet local republicans<a href="https://www.ccrrogop.org/event-calendar">Cumberland County Republicans Site</a></li>
+                    <li class="date-and-time">9/14/24 - 8:30pm</li>
+                    <li class="location">Eastlyn Golf Course or Maurice Township Firehall (double check their site)</li>
+                </ul>
+            </div>
+
+            <div class="event-card">
+                <ul class="event-info">
+                    <li class="name"><strong>County Commissioner Meeting</strong></li>
+                    <li class="description">Hear what's going on in the county and make public comments about your concerns<a href="https://cumberland.iqm2.com/Citizens/Detail_Meeting.aspx?ID=1667">Cumberland County Government Site</a></li>
+                    <li class="date-and-time">9/24/24 - 6:00pm</li>
+                    <li class="location">Administration Building, 164 West Broad Street, Bridgeton NJ 08302</li>
+                </ul>
+            </div>
+
+            <div class="event-card">
+                <ul class="event-info">
+                    <li class="name"><strong>CCRRO Breakfast Meeting</strong></li>
+                    <li class="description">Hear messaging from local Republicans and meet local republicans<a href="https://www.ccrrogop.org/event-calendar">Cumberland County Republicans Site</a></li>
+                    <li class="date-and-time">9/28/24 - 8:30pm</li>
+                    <li class="location">Eastlyn Golf Course or Maurice Township Firehall (double check their site)</li>
+                </ul>
+            </div>
+
+            <div class="event-card">
+                <ul class="event-info">
+                    <li class="name"><strong>Vineland School Board Meeting</strong></li>
+                    <li class="description">Find out what's going on with Vineland Public Schools<a href="https://www.vineland.org/o/vps/page/board-of-education">School Board Site</a></li>
+                    <li class="date-and-time">10/2/24 - 5:00pm</li>
+                    <li class="location">Landis Administration Building, 61 West Landis Ave, Vineland NJ 08360</li>
+                </ul>
+            </div>
+
+            <div class="event-card">
+                <ul class="event-info">
+                    <li class="name"><strong>CCRRO Breakfast Meeting</strong></li>
+                    <li class="description">Hear messaging from local Republicans and meet local republicans<a href="https://www.ccrrogop.org/event-calendar">Cumberland County Republicans Site</a></li>
+                    <li class="date-and-time">10/12/24 - 8:30pm</li>
+                    <li class="location">Eastlyn Golf Course or Maurice Township Firehall (double check their site)</li>
+                </ul>
+            </div>
+
+            <div class="event-card">
+                <ul class="event-info">
+                    <li class="name"><strong>CCRRO Breakfast Meeting</strong></li>
+                    <li class="description">Hear messaging from local Republicans and meet local republicans<a href="https://www.ccrrogop.org/event-calendar">Cumberland County Republicans Site</a></li>
+                    <li class="date-and-time">10/26/24 - 8:30pm</li>
+                    <li class="location">Eastlyn Golf Course or Maurice Township Firehall (double check their site)</li>
                 </ul>
             </div>
 
@@ -70,7 +205,7 @@
                 <ul class="event-info">
                     <li class="name"><strong>Vote!</strong></li>
                     <li class="description">Go vote</li>
-                    <li class="date-and-time">6/4/24 - 9 am</li>
+                    <li class="date-and-time">11/5/24 - 9 am</li>
                     <li class="location">Check where your voting location is</li>
                 </ul>
             </div>
