--- a/child_pages/get-involved.html
+++ b/child_pages/get-involved.html
@@ -124,7 +124,14 @@
                             </div>
                             <ul class="gi-ul">
                                 <li class="gi-ul-li">
-                                    <strong>Bi-weekly Republican Party Breakfast at Eastlyn Golf Course:</strong> This suggestion isn't meant to be partisan; it's based on the frequency and consistency of these events. At these Saturday morning gatherings, you can meet Republican candidates and ask them election-related questions. There's currently no comparable event for Democrats, as they haven't posted any events on <a href="https://cumberlandnjdems.com/events/">their website</a> in quite some time. <a href="https://informthevotecc.netlify.app/child_pages/events">See our Events page for more info.</a> <a href="https://www.ccrrogop.org/event-calendar">More info also on CCROGOP Website.</a>
+                                    <strong>Bi-weekly Republican Party Breakfast at Eastlyn Golf Course:</strong> This suggestion isn't meant to be partisan; it's based on 
+                                    the frequency and consistency of these events. At these Saturday morning gatherings, you can hear their local messaging, meet Republican 
+                                    candidates and ask them election-related questions. There's currently no comparable event for Democrats, as they haven't posted any events 
+                                    on <a href="https://cumberlandnjdems.com/events/">their website</a> in quite some time. Alternatively, you can scour their 
+                                    <a href="https://www.facebook.com/groups/442220931182672">facebook group</a> for events. We try to do this from time to time, but events 
+                                    tend to get buried among the messaging posts, with notice to events oftentimes being less than a week or even sometimes less than a day.
+                                    <a href="https://informthevotecc.netlify.app/child_pages/events">See our Events page for more info.</a> 
+                                    <a href="https://www.ccrrogop.org/event-calendar">More info also on CCROGOP Website.</a>
                                     <p>**Important Note - The location of these breakfasts are always subject to change, be sure to check event info of each individual event date.</p>
                                 </li>
                                 <li class="gi-ul-li">
@@ -139,11 +146,10 @@
                                     <strong>County Commissioner Meetings:</strong> These meetings are a great way to understand how 
                                     local government functions and what issues are currently at the forefront. Each meeting has a 
                                     'public comments' section, allowing you to actively participate. Prepare your questions and bring 
-                                    a notebook to jot down important points.
-                                    <br>
-                                    <br>
-                                    <center><a href="https://informthevotecc.netlify.app/child_pages/events">See our events page for more info.</a></center>
-                                    <br>
+                                    a notebook to jot down important points. They are usually held at the administration building at 164 West Broad Street in Bridgeton,
+                                    at 6pm, but sometimes they move around. We post some of these on our events calendar, but be sure to double check the
+                                    <a href="https://cumberland.iqm2.com/citizens/Default.aspx?AgencyName=Cumberland">Cumberland County Government Site</a> as things 
+                                    are always subject to change.
                                 </li>
                                 <li class="gi-ul-li">
                                     <strong>Download the Vineland Public Schools App:</strong> Stay informed with what's going on. 
@@ -152,12 +158,16 @@
                                     <center>Go <a href="https://www.vineland.org/page/parents-main">here</a></center>. 
                                     <br>
                                     <br>
-                                    Scroll down and click on the appropriate apple store or google play link.
+                                    Scroll down and click on the appropriate apple store or google play link. Also, Vineland School Board meetings are usually on the first 
+                                    Wednesday of the month at the old Landis School on Landis Avenue, starting at 5pm. They are listed on our events calendar, but double check 
+                                    the <a href="https://drive.google.com/file/d/1aDfVrXANM_OHdnGIeqzIsoFe5AuDoJFL/view">school board meeting postings</a> as things are always 
+                                    subject to change.
                                     <br>
                                     <br>
                                 </li>
                                 <li class="gi-ul-li">
-                                    <strong>Casual County Events:</strong> Events like Deerfield Day give you a chance to interact with candidates, even if the main focus isn't on the upcoming election. However, these events are often poorly advertised, which we hope to change. 
+                                    <strong>Casual County Events:</strong> Events like Deerfield Day give you a chance to interact with candidates, even if the main focus 
+                                    isn't on the upcoming election. However, these events are often poorly advertised by political candidates, which we hope to change. 
                                     <br>
                                     <br>
                                     <center><a href="https://explorecumberlandnj.com/calendar/">Visit the Cumberland County 4H Event Calendar for more info.</a></center>
@@ -177,18 +187,14 @@
                                     <center><a href="https://www.vinelandchamber.org/events/calendar">Visit the Vineland events calendar for activities that might interest you.</a></center>
                                     <br>
                                 </li>
+                                <li class="gl-li">
+                                    <strong>Contribute to the Facebook Group:</strong> There are lots of potential bits of information and reasonable questions that we might miss.
+                                    If you are paying attention to election related politics and feel that you can help us by contributing your own ideas regarding relatively objective 
+                                    information or have reasonable speculative questions about what exactly is going on, please share it with us at our <a href="https://www.facebook.com/groups/781111154116727">Facebook Group.</a>                            
+                                </li>
                             </ul>
                         </li>
-                        <li class="gl-li">
-                            <strong>Contribute to the Facebook Group:</strong> There are lots of potential bits of information and reasonable questions that we might miss.
-                            If you are paying attention to election related politics and feel that you can help us by contributing your own ideas regarding relatively objective 
-                            information or have reasonable speculative questions about what exactly is going on, please share it with us at our 
-                            <br>
-                            <br>
-                            <center><a href="https://www.facebook.com/groups/781111154116727">Facebook Group.</a></center>
-                            <br>
-                            
-                        </li>
+                        
                     </ol>
                 </div>
         </div>
