homepage button z-index bug fix

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
             </div>
             <div class="cta-link-box">
                  <a href="child_pages/get-involved.html" id='videoSummary' class="cta-link"><button class="hp-banner-button">Video Summary</button></a>
-                 <a href="#" id='actualVideo' class="cta-link"><button class="hp-banner-button">Video</button></a>
+                 <button id='actualVideo' class="hp-banner-button">Video</button>
             </div>
         </div>
 
