footer added to hp

--- a/index.html
+++ b/index.html
@@ -243,17 +243,17 @@
     </div>
     <footer>
         <div class="social-icon-box">
-            <a href="" class="social-icon-link">
-                <img src="" alt="" class="social-icon">
+            <a target="_blank" rel="noreferrer noopener" href="https://www.facebook.com/people/Inform-the-Vote-NJ/61558980497931/" class="social-icon-link">
+                <img src="assets/facebook.svg" alt="facebook icon" class="social-icon fb-icon">
             </a>
-            <a href="" class="social-icon-link">
-                <img src="" alt="" class="social-icon">
+            <a target="_blank" rel="noreferrer noopener" href="https://www.youtube.com/@InformTheVoteNJ" class="social-icon-link">
+                <img src="assets/youtube.svg" alt="youtube icon" class="social-icon youtube-icon">
             </a>
         </div>
         <div class="lampe-plug">
-            <a href="mailto:pierrelampre@gmail.com" class="webmaster">Contact the Webmaster</a>
+            © 2024 <a href="mailto:pierrelampre@gmail.com" class="webmaster">Lampelights Webcraft</a>
         </div>
-        
+
     </footer>
     </div>
 </body>
