experimenting with preloading images

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Anton+SC&display=swap" rel="stylesheet">
+        <link rel="preload" href="assets/blue_court.jpg" as="image" type="image/jpg" />
         <script src="homepage_scripts.js" async></script>
         <meta property="og:title" content="Inform The Vote NJ">
         <meta property="og:description" content="Election information for NJ residents">
