--- a/child_pages/events.html
+++ b/child_pages/events.html
@@ -12,6 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Lora&family=REM:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,600;1,700&family=Roboto+Mono&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Anton+SC&display=swap" rel="stylesheet">
+    <link rel="preload" href="../assets/events.jpg" as="image" type="image/jpg" />
     <script src="../app.js" async></script>
     <title>Inform The Vote</title>
 </head>
