updates and cleanups for commissioner and clerk candidates

--- a/child_pages/cc-elections/Candidates/capizola.html
+++ b/child_pages/cc-elections/Candidates/capizola.html
@@ -88,26 +88,10 @@
             <a href="https://www.instagram.com/jcapizola/?hl=en" target="_blank" rel="noopener noreferrer" class="website-link">Instagram</a>
         </div>
 
-        <br>
-        <br>
-
-        <h4> Public Events </h4>
-
-        <div class="event-card">
-            <ul class="event-info">
-                <li class="name"><strong>Campaign Fundraiser for Candidates Riley, Austino, and Capizola</strong></li>
-                <li class="description">Support event for the candidates. <a href="https://www.facebook.com/photo?fbid=122111298668284447&set=a.122109417842284447">Details on Facebook</a></li>
-                <li class="date-and-time">05/22/24 - 5:30 pm</li>
-                <li class="location">Terra Nono Winery, 370 Garrison Road, Millville NJ, 08332</li>
-            </ul>
-        </div>
-
-        <br>
-        <br>
 
         <h4 class="sub-heading">individual agenda</h4>
             <div class="agenda-thesis">
-                As of 5/20/2024, Inform the Vote has scoured the internet and attempted to contact the former Commissioner multiple times. In terms of specific agenda, there only 
+                As of 8/1/2024, Inform the Vote has scoured the internet and attempted to contact the former Commissioner multiple times. In terms of specific agenda, there only 
                 seems to be a campaign picture on his <a href="https://www.facebook.com/photo?fbid=122111298668284447&set=a.122109417842284447">facebook campaign site</a> regarding 
                 improving roads/infrastructure/broadband, supporting senior housing and healthcare, and providing recreational advancements.
             </div>
@@ -117,9 +101,14 @@
 
             <h4 class="sub-heading">party messaging</h4>
             <div class="agenda-per-party-site">
-                Support Senior housing and Healthcare Services.
-                Provide county recreational advancements, building a county indoor sports facility and swim center and improving county recreation areas.
-                Support state of the art correctional facility, by improving conditions and programs and drive long standing issues with facility to closure. Also wishes to reduce cost and tax burden of facility.
+                After reaching out to various members of the CumberlandNJ Dems, it is unclear how the Democrat party agenda specifically and currently applies to Cumberland County. However, 
+                we might be able to infer the following things from last year's messaging:
+                <ul>
+                    <li>Support Senior housing and Healthcare Services.</li>
+                    <li>Provide county recreational advancements, building a county indoor sports facility and swim center and improving county recreation areas.</li>
+                    <li>Support state of the art correctional facility, by improving conditions and programs and drive long standing issues with facility to closure. Also wishes to reduce 
+                        cost and tax burden of facility.</li>
+                </ul> 
             </div>
 
             <br>
@@ -127,8 +116,12 @@
 
             <h4 class="sub-heading">policy positions</h4>
             <div class="policy-positions">
+                After reaching out to Capizola multiple times with no substantive response, it is unclear what his current policy positions are. However, we might be able to infer the 
+                following from last year's efforts:
                 <br>
-                Supports armed security in schools. (learned from the Candidates Forum held at Bridgeton High School)
+                <ul>
+                    <li>Supports armed security in schools. (learned from the Candidates Forum held at Bridgeton High School)</li>
+                </ul>
             </div>
 
             <br>
