--- a/child_pages/get-involved.html
+++ b/child_pages/get-involved.html
@@ -87,6 +87,10 @@
                             <br>
                             <center><a href="cc-elections/us_president_2024.html">US President Election</a></center> 
                         </li>
+
+                        <br>
+                        <br>
+
                         <li class="gl-li">
                             <strong>Internalize the Popular Issues:</strong> Before you can assess a candidate's suitability, you need 
                             to know where you stand on the key issues. Our Issues page offers a comprehensive overview of ongoing and 
@@ -104,9 +108,12 @@
                             <br>
                             <center><a href="/child_pages/cc-elections/us_vice_president_issues.html">US Vice President Issues</a></center>
                             <br>
-                            <center><a href="/child_pages/cc-elections/us_president_issues.html">US President Issues</a></center>
-                            
+                            <center><a href="/child_pages/cc-elections/us_president_issues.html">US President Issues</a></center>  
                         </li>
+
+                        <br>
+                        <br>
+
                         <li class="gl-li">
                             <div class="gl-li-title"><strong>Show Up:</strong> Go to events where candidates will be present and ask 
                                 questions that will help you make an informed voting decision. Use our consolidated calendar as a 
@@ -143,15 +150,6 @@
                                     <br>
                                 </li>
                                 <li class="gi-ul-li">
-                                    <strong>County Commissioner Meetings:</strong> These meetings are a great way to understand how 
-                                    local government functions and what issues are currently at the forefront. Each meeting has a 
-                                    'public comments' section, allowing you to actively participate. Prepare your questions and bring 
-                                    a notebook to jot down important points. They are usually held at the administration building at 164 West Broad Street in Bridgeton,
-                                    at 6pm, but sometimes they move around. We post some of these on our events calendar, but be sure to double check the
-                                    <a href="https://cumberland.iqm2.com/citizens/Default.aspx?AgencyName=Cumberland">Cumberland County Government Site</a> as things 
-                                    are always subject to change.
-                                </li>
-                                <li class="gi-ul-li">
                                     <strong>Download the Vineland Public Schools App:</strong> Stay informed with what's going on. 
                                     <br>
                                     <br>
@@ -166,6 +164,15 @@
                                     <br>
                                 </li>
                                 <li class="gi-ul-li">
+                                    <strong>County Commissioner Meetings:</strong> These meetings are a great way to understand how 
+                                    local government functions and what issues are currently at the forefront. Each meeting has a 
+                                    'public comments' section, allowing you to actively participate. Prepare your questions and bring 
+                                    a notebook to jot down important points. They are usually held at the administration building at 164 West Broad Street in Bridgeton,
+                                    at 6pm, but sometimes they move around. We post some of these on our events calendar, but be sure to double check the
+                                    <a href="https://cumberland.iqm2.com/citizens/Default.aspx?AgencyName=Cumberland">Cumberland County Government Site</a> as things 
+                                    are always subject to change.
+                                </li>
+                                <li class="gi-ul-li">
                                     <strong>Casual County Events:</strong> Events like Deerfield Day give you a chance to interact with candidates, even if the main focus 
                                     isn't on the upcoming election. However, these events are often poorly advertised by political candidates, which we hope to change. 
                                     <br>
@@ -174,14 +181,17 @@
                                     <br>
                                 </li>
                                 <li class="gi-ul-li">
-                                    <strong>Miscellaneous County Department Meetings:</strong> These meetings can offer a deeper dive into the workings of the county. While they may not directly relate to the upcoming election, they provide context for larger political issues and can be beneficial for those with extra time and curiosity.
+                                    <strong>Miscellaneous County Department Meetings:</strong> These meetings can offer a deeper dive into the workings of the county. While they may not 
+                                    directly relate to the upcoming election, they provide context for larger political issues and can be beneficial for those with extra time and curiosity.
+                                    They can also sometimes highlight some of the key issues going on throughout the county.
                                     <br>
                                     <br>
                                     <center><a href="https://www.cumberlandcountynj.gov/meetings">Visit the Cumberland County public meetings calendar for more info.</a></center>
                                     <br>
                                 </li>
                                 <li class="gi-ul-li">
-                                    <strong>City Event Calendars:</strong> Cities like Vineland have many community related events posted. While they may not directly relate to the upcoming election, they provide context for larger political issues and can be beneficial for those with extra time and curiosity.
+                                    <strong>City Event Calendars:</strong> Cities like Vineland have many community related events posted. While they may not directly relate to the 
+                                    upcoming election, they provide context for larger political issues and can be beneficial for those with extra time and curiosity.
                                     <br>
                                     <br>
                                     <center><a href="https://www.vinelandchamber.org/events/calendar">Visit the Vineland events calendar for activities that might interest you.</a></center>
@@ -190,7 +200,7 @@
                                 <li class="gl-li">
                                     <strong>Contribute to the Facebook Group:</strong> There are lots of potential bits of information and reasonable questions that we might miss.
                                     If you are paying attention to election related politics and feel that you can help us by contributing your own ideas regarding relatively objective 
-                                    information or have reasonable speculative questions about what exactly is going on, please share it with us at our <a href="https://www.facebook.com/groups/781111154116727">Facebook Group.</a>                            
+                                    information, or have reasonable speculative questions about what exactly is going on, please share it with us at our <a href="https://www.facebook.com/groups/781111154116727">Facebook Group.</a>                            
                                 </li>
                             </ul>
                         </li>
