--- a/child_pages/resources-archives-and-rabbit-holes.html
+++ b/child_pages/resources-archives-and-rabbit-holes.html
@@ -73,8 +73,7 @@
                             <div class="video-box-modal">
                                 <h3 class="video-heading">Jim Quinn with Cumberland County Commissioner Douglas Albrecht</h3>
                             
-                                <iframe src="https://www.youtube.com/watch?v=xhfVyMaKsNQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>                            
-                            </div>
+                                <iframe src="https://www.youtube.com/embed/xhfVyMaKsNQ?si=IYEuHqYfVo1612n_" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>                            </div>
                             <br>
                             <br>
                             <div class="video-box-modal">
