rileys name corrected, added scripts to county clerk pages

--- a/child_pages/cc-elections/Candidates/riley.html
+++ b/child_pages/cc-elections/Candidates/riley.html
@@ -7,6 +7,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Calistoga&family=Roboto+Mono&display=swap" rel="stylesheet">
+        <script src="../../../app.js" async></script>
         <title>Inform The Vote</title>
     </head>
     <body>
@@ -60,7 +61,7 @@
         <img src="../../../assets/lighthouse.jpg" alt="cumberland county symbol" id="jumbotronjawn">
 <div class="container">
     <div class="title-info">
-        <h2>Victoria Lods</h2>
+        <h2>Celeste Riley</h2>
         <div class="running-for">
             <div class="running-title">Running for: </div>
             <div class="position">Cumberland County Clerk</div>
