--- a/child_pages/get-involved.html
+++ b/child_pages/get-involved.html
@@ -77,13 +77,13 @@
                         <li class="link"><a href="cc-elections/us_demprimary_senate.html">Democrat Primary US Senate</a></li>
                         <li class="link"><a href="cc-elections/us_houseofrepresentatives_demprimary.html">Democrat Primary US House of Representatives</a></li>
                         <li class="link"><a href="cc-elections/us_president_demprimary.html">Democrat Primary President</a></li>
-                        <!-- <li class="link"><a href="../vsb-elections/vsb_election_candidates.html">Vineland School Board Elections</a></li>
+                        <li class="link"><a href="../vsb-elections/vsb_election_candidates.html">Vineland School Board Elections</a></li>
                         <li class="link"><a href="../vsb-elections/vsb_election_issues.html">School Board Issues</a></li>
-                        <li class="link"><a href="../cc-elections/unanswered_questions.html">Unanswered Questions</a></li> -->
+                        <li class="link"><a href="../cc-elections/unanswered_questions.html">Unanswered Questions</a></li> 
                         <li class="link"><a href="get-involved.html">Get Involved</a></li>
                         <li class="link"><a href="events.html">Events</a></li>
                         <li class="link"><a href="resources-archives-and-rabbit-holes.html">Resources, Archives, and Rabbit Holes</a></li>
-                        <!-- <li class="link"><a href="..candidates-forum-op-ed.html">Candidates Forum Op-Ed</a></li> -->
+                        <li class="link"><a href="..candidates-forum-op-ed.html">Candidates Forum Op-Ed</a></li>
                         <li class="link"><a href="about.html">About</a></li>
                         <li class="link"><a href="contact.html">Contact</a></li>
                     </ul>
