--- a/child_pages/get-involved.html
+++ b/child_pages/get-involved.html
@@ -70,7 +70,7 @@
             <div>
                 <div>
                     <ul class="links">
-                        <li class="link"><a id="home" href="/index.html">Home</a></li>
+                        <li class="link"><a id="home" href="https://www.informthevotenj.com/index.html">Home</a></li>
                         <div class="accordion">
                             <input type="checkbox" name="accordion" id="first">
                             <label for="first">Elections</label>
