--- a/child_pages/get-involved.html
+++ b/child_pages/get-involved.html
@@ -61,6 +61,51 @@
         </div>
     </div> -->
     
+    <!-- <div class="menu-wrap">
+        <input type="checkbox" autocomplete='off' class="toggler">
+        <div class="hamburger">
+            <div></div>
+        </div>
+        <div class="menu">
+            <div>
+                <div>
+                    <ul class="links">
+                        <li class="link"><a id="home" href="https://www.informthevotenj.com/index.html">Home</a></li>
+                        <div class="accordion">
+                            <input type="checkbox" name="accordion" id="first">
+                            <label for="first">Elections</label>
+                            <div class="nested-burger-links">
+                                <li class="link"><a href="child_pages/cc-elections/cc_county_commissioners_2024.html">Cumberland County Commissioners</a></li>
+                                <li class="link"><a href="child_pages/cc-elections/cc_county_clerk_2024.html">Cumberland County Clerk</a></li>
+                                <li class="link"><a href="child_pages/cc-elections/house_of_representatives_2024.html">US House of Representatives, NJ's 2nd Congressional District</a></li>
+                                <li class="link"><a href="child_pages/cc-elections/us_senate_2024.html">US Senate, NJ</a></li>
+                                <li class="link"><a href="child_pages/cc-elections/cc_vice_president_2024.html">US Vice President</a></li>
+                                <li class="link"><a href="child_pages/cc-elections/us_president_2024.html">US President</a></li>
+                            </div>
+                        </div>
+                        <div class="accordion">
+                            <input type="checkbox" name="accordion" id="second">
+                            <label for="second">Issues</label>
+                            <div class="nested-burger-links">
+                                <li class="link"><a href="child_pages/cc-elections/cc_election_issues.html">Cumberland County Issues</a></li>
+                                <li class="link"><a href="#">County Clerk Issues</a></li>
+                                <li class="link"><a href="#">House of Representatives Issues</a></li>
+                                <li class="link"><a href="#">US Senate Issues</a></li>
+                                <li class="link"><a href="#">Vice President Issues</a></li>
+                                <li class="link"><a href="#">President Issues</a></li>
+                            </div>
+                        </div>
+                        <li class="link"><a href="child_pages/get-involved.html">Get Involved</a></li>
+                        <li class="link"><a href="child_pages/events.html">Events</a></li>
+                        <li class="link"><a href="child_pages/resources-archives-and-rabbit-holes.html">Extra Info</a></li>
+                        <li class="link"><a href="child_pages/about.html">About</a></li>
+                        <li class="link"><a href="child_pages/contact.html">Contact</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div> -->
+
     <div class="menu-wrap">
         <input type="checkbox" autocomplete='off' class="toggler">
         <div class="hamburger">
