--- a/child_pages/get-involved.html
+++ b/child_pages/get-involved.html
@@ -133,11 +133,11 @@
                             <label for="second">Issues</label>
                             <div class="nested-burger-links">
                                 <li class="link"><a href="cc-elections/cc_election_issues.html">Cumberland County Issues</a></li>
-                                <li class="link"><a href="#">County Clerk Issues</a></li>
-                                <li class="link"><a href="#">House of Representatives Issues</a></li>
-                                <li class="link"><a href="#">US Senate Issues</a></li>
-                                <li class="link"><a href="#">Vice President Issues</a></li>
-                                <li class="link"><a href="#">President Issues</a></li>
+                                <li class="link"><a href="cc-elections/cc_county_clerk_issues.html">County Clerk Issues</a></li>
+                                <li class="link"><a href="cc-elections/us_house_of_reps_issues.html">House of Representatives Issues</a></li>
+                                <li class="link"><a href="cc-elections/us_senate_issues.html">US Senate Issues</a></li>
+                                <li class="link"><a href="cc-elections/us_vice_president_issues.html">Vice President Issues</a></li>
+                                <li class="link"><a href="cc-elections/us_president_issues.html">President Issues</a></li>
                             </div>
                         </div>
                         <li class="link"><a href="get-involved.html">Get Involved</a></li>
