--- a/child_pages/timeline.html
+++ b/child_pages/timeline.html
@@ -27,26 +27,41 @@
           <div>
               <div>
                   <ul class="links">
-                    <li class="link"><a href="../index.html">Home</a></li>
-                        <li class="link"><a href="cc-elections/cc_demprimary_county_commissioner_2024.html">Cumberland County Commissioner Democrat Primary</a></li>
-                        <li class="link"><a href="cc-elections/cc_election_issues.html">County Issues</a></li>
-                        <li class="link"><a href="cc-elections/us_repubprimary_senate.html">Republican Primary US Senate</a></li>
-                        <li class="link"><a href="cc-elections/us_demprimary_senate.html">Democrat Primary US Senate</a></li>
-                        <li class="link"><a href="cc-elections/us_houseofrepresentatives_demprimary.html">Democrat Primary US House of Representatives</a></li>
-                        <li class="link"><a href="cc-elections/us_president_demprimary.html">Democrat Primary President</a></li>
-                        <!-- <li class="link"><a href="../vsb-elections/vsb_election_candidates.html">Vineland School Board Elections</a></li>
-                        <li class="link"><a href="../vsb-elections/vsb_election_issues.html">School Board Issues</a></li>
-                        <li class="link"><a href="../cc-elections/unanswered_questions.html">Unanswered Questions</a></li> -->
-                        <li class="link"><a href="get-involved.html">Get Involved</a></li>
-                        <li class="link"><a href="events.html">Events</a></li>
-                        <!-- <li class="link"><a href="..candidates-forum-op-ed.html">Candidates Forum Op-Ed</a></li> -->
-                        <li class="link"><a href="about.html">About</a></li>
-                        <li class="link"><a href="contact.html">Contact</a></li>
+                      <li class="link"><a id="home" href="https://www.informthevotenj.com/index.html">Home</a></li>
+                      <div class="accordion">
+                          <input type="checkbox" name="accordion" id="first">
+                          <label for="first">Elections</label>
+                          <div class="nested-burger-links">
+                              <li class="link"><a href="cc-elections/cc_county_commissioners_2024.html">Cumberland County Commissioners</a></li>
+                              <li class="link"><a href="cc-elections/cc_county_clerk_2024.html">Cumberland County Clerk</a></li>
+                              <li class="link"><a href="cc-elections/house_of_representatives_2024.html">US House of Representatives, NJ's 2nd Congressional District</a></li>
+                              <li class="link"><a href="cc-elections/us_senate_2024.html">US Senate, NJ</a></li>
+                              <li class="link"><a href="cc-elections/cc_vice_president_2024.html">US Vice President</a></li>
+                              <li class="link"><a href="cc-elections/us_president_2024.html">US President</a></li>
+                          </div>
+                      </div>
+                      <div class="accordion">
+                          <input type="checkbox" name="accordion" id="second">
+                          <label for="second">Issues</label>
+                          <div class="nested-burger-links">
+                              <li class="link"><a href="cc-elections/cc_election_issues.html">Cumberland County Issues</a></li>
+                              <li class="link"><a href="cc-elections/cc_county_clerk_issues.html">County Clerk Issues</a></li>
+                              <li class="link"><a href="cc-elections/us_house_of_reps_issues.html">House of Representatives Issues</a></li>
+                              <li class="link"><a href="cc-elections/us_senate_issues.html">US Senate Issues</a></li>
+                              <li class="link"><a href="cc-elections/us_vice_president_issues.html">Vice President Issues</a></li>
+                              <li class="link"><a href="cc-elections/us_president_issues.html">President Issues</a></li>
+                          </div>
+                      </div>
+                      <li class="link"><a href="get-involved.html">Get Involved</a></li>
+                      <li class="link"><a href="events.html">Events</a></li>
+                      <li class="link"><a href="resources-archives-and-rabbit-holes.html">Extra Info</a></li>
+                      <li class="link"><a href="about.html">About</a></li>
+                      <li class="link"><a href="contact.html">Contact</a></li>
                   </ul>
               </div>
           </div>
       </div>
-    </div>
+  </div>
 
     <img src="../../assets/lighthouse.jpg" alt="cumberland county symbol" id="jumbotronjawn">
 
