salerno and austino updates from deerfield day

--- a/child_pages/cc-elections/Candidates/austino.html
+++ b/child_pages/cc-elections/Candidates/austino.html
@@ -64,16 +64,16 @@
               <img src="../../../assets/x-icon-33.png" alt="an x icon - click to close the quick summary modal" class="close">
               <h4 class="quick-sum">quick summary</h4>
               <h6 class="page-title">Robert A. Austino</h6>
-              <p>Former Sheriff Austino is a democrat who appears to be running with former commissioner Capizola 
-              'against' candidates Smith and Perella. The sheriff has lengthy experience working in government as sheriff, but no direct experience as a 
+              <p>Sheriff has lengthy experience working in government as sheriff, but no direct experience as a 
               commissioner. As per a campaign picture on his <a href="https://www.facebook.com/photo/?fbid=122116637984284447&set=a.122109417842284447">facebook campaign site</a>, his agenda 
               seems to be to improve road/infrastructure/broadband, support senior housing and healthcare, and provide recreational advancements. 
               </p>
               <p>              
-                Also, Inform the Vote has not yet received a
-              response from him regarding campaign related information. A surface level guess would be that Austino and Capizola would be more center-left 
-              than Perella and Smith, but we cannot verify that at the moment. Click the red x at the top of this box and then scroll down down for more in-depth 
-              information and sources.
+            When asked at Deerfield Day to clarify his agenda, policy positions, and comparing that to the incumbents he is challenging, Austino basically said (paraphrased): 
+            "My big thing is money and budget. The county is attempting to build 3 county parks when our budget is stretched. I helped run a budget for 15 years, so I will help bring 
+            fiscal responsibility to the board of commissioners." Be sure to check our 
+            <a href="https://www.informthevotenj.com/child_pages/cc-elections/cc_election_issues">county issues page</a> to get a more detailed look at what's going on in the county. 
+            Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
               </p>
             </div>
           
