--- a/child_pages/cc-elections/Candidates/salerno.html
+++ b/child_pages/cc-elections/Candidates/salerno.html
@@ -73,7 +73,9 @@
                 While it is understandable that left leaning people like Salerno might not like Van Drew's political alignments and voting record, Van Drew has decades of political 
                 experience, with about 5 years specific experience as a US Congressman, while Salerno apparently has no direct political experience. With that in mind, it is the 
                 opinion of InformTheVote that more discussion is necessary regarding how Salerno intends on implementing his agenda in a way that is significantly different or 
-                better than Van Drew, as opposed to simply attacking Van Drew.
+                better than Van Drew, as opposed to simply attacking Van Drew. When we asked at Deerfield day about getting more into the nuances regarding his agenda, policy positions, 
+                and directly comparing that to Van Drew's agenda and policy positions, Salerno basically said (paraphrased): "I don't have a very specific agenda or policy positions. I was 
+                more inspired to run to help government become more unified and less divisive. Van Drew also seems to lack a moral compass."
                 Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
               </p>
             </div>
